# uoa_fsd

./: .gitignore  .gitmodules  README.md  fsd_aliases  fsd_environment.sh  requirements.txt  requirements_harvey.txt  update_dependencies.sh
src/1_perception/sensor_camera/aruco_detector/: CMakeLists.txt  package.xml
src/1_perception/sensor_camera/aruco_detector/src/: stereo_detector_node.cpp
src/1_perception/sensor_camera/cares_msgs/msg/: MarkersPoseID.msg
src/1_perception/sensor_camera/pylon_camera/config/: calibration.json
src/1_perception/sensor_camera/pylon_camera/launch/: pylon_camera_node.launch  pylon_camera_node_calibrated.launch
src/1_perception/sensor_camera/pylon_camera/src/: camera.cpp  pylon_stereo_node.cpp
src/1_perception/sensor_camera/stereo_calibration/launch/: file_stereo_calibrate_checker.launch  live_stereo_calibrate_checker.launch
src/1_perception/steering_angle_sensor/: CMakeLists.txt  package.xml
src/1_perception/steering_angle_sensor/as5600_arduino/: as5600_arduino.ino
src/1_perception/steering_angle_sensor/sensor_steering_angle/: sensor_steering_angle.ino
src/3_control/control_pure_pursuit/config/: pure_pursuit.yaml
src/3_control/control_pure_pursuit/include/: pure_pursuit.hpp
src/fsd_rl/: CMakeLists.txt  package.xml
src/fsd_rl/config/: airl_params.yaml
src/fsd_rl/launch/: main.launch  physical.launch
src/fsd_rl/src/: NEAT.py  fsd_env.py  gazebo_connection.py  main_physical.py  main_test.py  myquadcopter_env.py  start_training.py
src/fsd_rl/src/airl/: README.md  collect_demo.py  requirements.txt  run_inference.py  train_expert.py  train_imitation.py
src/fsd_rl/src/airl/buffers/Fsd-v0/Other (currently using 2000)/: size15_std0.0_prand0.0.pth
src/fsd_rl/src/airl/buffers/Fsd-v0/Other/PP/: size2000_std0.0_prand0.0.pth
src/fsd_rl/src/airl/gail_airl_ppo/: buffer.py  connections.py  env.py  trainer.py  utils.py
src/fsd_rl/src/airl/gail_airl_ppo/algo/: __init__.py  airl.py  base.py  gail.py  ppo.py  sac.py
src/fsd_rl/src/airl/gail_airl_ppo/network/: disc.py  policy.py  value.py
src/fsd_rl/src/airl/logs/Fsd-v0/inference/: inferenceLog_sim_sac_Fsd-v0_20210808-1818.txt  inferenceLog_sim_sac_Fsd-v0_20210808-1820.txt  inferenceLog_sim_sac_Fsd-v0_20210808-1830.txt  inferenceLog_sim_sac_Fsd-v0_20210808-1839.txt  logInference_sim_sac_Fsd-v0_20210812-1427.txt  logInference_sim_sac_Fsd-v0_20210825-1021.txt  logInference_sim_sac_Fsd-v0_20210826-1106.txt  logInference_sim_sac_Fsd-v0_20210827-1236.txt  logInference_sim_sac_Fsd-v0_20210901-1233.txt  logInference_sim_sac_Fsd-v0_20210901-1235.txt  logInference_sim_sac_Fsd-v0_20210901-1240.txt  logInference_sim_sac_Fsd-v0_20210901-1241.txt
src/fsd_rl/src/airl/weights/: Fsd-v0-135SAC.pth  Fsd-v0-AIRL-13.pth  Fsd-v0-SAC-18b-190000.pth  Fsd-v0.pth  Fsd-v0_old.pth
src/fsd_rl/training_results/: openaigym.manifest.0.17680.manifest.json
src/fsd_rl/utils/: plot_results.py
src/fssim/fssim/launch/: start.launch
src/fssim/fssim/scripts/: automated_res.py  launch.py
src/fssim/fssim/src/fssim/: shell.py  statistics.py  vehicle_position_validate.py
src/fssim/fssim_description/cars/gotthard/config/: distances.yaml
src/fssim/fssim_description/cars/physical/config/: car.yaml  distances.yaml  sensors.yaml
src/fssim/fssim_gazebo/models/track/: FSG.sdf  FSG_flipped.sdf  model.config  phys_L backup.sdf  phys_L.sdf  phys_R_loose.sdf  phys_R_tight.sdf  phys_straight.sdf  physical.sdf  physical_old.sdf  track_test.sdf
src/fssim/fssim_gazebo/models/track/tracks_yaml/: FSG_flipped.yaml  phys_L.yaml  phys_R_loose.yaml  phys_R_tight.yaml  phys_straight.yaml  physical_old.yaml  track_test.yaml
src/fssim/fssim_gazebo_plugins/gazebo_race_car_model/include/: wheel.hpp
src/fssim/fssim_gazebo_plugins/gazebo_race_car_model/src/: vehicle.cpp
src/fssim/fssim_rqt_plugins/rqt_fssim_track_editor/tracks/phys_L/: phys_L.yaml
src/fssim/fssim_rqt_plugins/rqt_fssim_track_editor/tracks/phys_straight/: phys_straight.yaml
src/fssim/fssim_rqt_plugins/rqt_fssim_track_editor/tracks/physical/: physical.yaml
src/fssim/fssim_rqt_plugins/rqt_fssim_track_editor/tracks/track_test/: track_test.yaml
src/fssim_interface/: CMakeLists.txt
src/fssim_interface/fssim_config/: local_simulation.yaml  local_simulation_phys.yaml
src/fssim_interface/fssim_config/sensors/: sensors_1.yaml  sensors_1_gotthard.yaml  sensors_1_physical.yaml
src/fssim_interface/launch/: fssim.launch  fssim_phys.launch  only_interface.launch  record_sim.launch  rviz.launch
src/fssim_interface/rviz/: trackdrive.rviz
src/rqt_multiplot_plugin/configurations/: sim-multiplot-neat.xml  sim-multiplot-sac_airl.xml
(+392 files in other folders)
